--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ section#home{
 	left: 0;
 	right: 0;
 	bottom: 0;
-	background-color: rgba(201, 221, 245, 0.1);
+	background-color: rgba(201, 221, 245, 0.2);
 }
 @media (min-aspect-ratio: 16/9) {
   .video-foreground { height: 300%; top: -100%; }
@@ -206,7 +206,7 @@ header.onTop .navbar-toggler-right{
 	left: 0;
 	right: 0;
 	bottom: 0;
-	padding: 200px calc(50% - 496px) 0;
+	padding: 320px calc(50% - 496px) 0;
 	z-index: 1;
 }
 #home h1{
@@ -227,7 +227,7 @@ header.onTop .navbar-toggler-right{
 	background-repeat: no-repeat;
 	background-position: center;
 	width: 370px;
-	height: 226px;/*326px;*/
+	height: 76px;/*326px;*/
 	background-color: transparent;
 	position: relative;
 	visibility: hidden;
@@ -398,12 +398,9 @@ header.onTop .navbar-toggler-right{
 }
 
 .ecosystem{
-	background: #fff; /* For browsers that do not support gradients */
-    background: -webkit-linear-gradient(rgb(255, 255, 255), rgb(110, 155, 205)); /* For Safari 5.1 to 6.0 */
-    background: -o-linear-gradient(rgb(255, 255, 255), rgb(110, 155, 205)); /* For Opera 11.1 to 12.0 */
-    background: -moz-linear-gradient(rgb(255, 255, 255), rgb(110, 155, 205)); /* For Firefox 3.6 to 15 */
-    background: linear-gradient(rgb(255, 255, 255), rgb(110, 155, 205)); /* Standard syntax */
-	padding-bottom: 40px;
+	background: #fff;
+	box-shadow: 0 0 10px rgba(0, 0, 0, .5);
+	z-index: 1;
 }
 .ecosystem p{
 	color: #000;
@@ -445,6 +442,9 @@ header.onTop .navbar-toggler-right{
 	margin-bottom: 0;
 	font-size: 20px;
 	line-height: 22px;
+}
+.icodetails{
+	background: rgba(117, 153, 231, 1);
 }
 #pie-container{
 	height: 50vw;
@@ -1211,4 +1211,66 @@ footer button:focus, footer button:active{
 	animation-iteration-count: infinite;
 	-webkit-animation-timing-function: linear; /* Safari 4.0 - 8.0 */
 	animation-timing-function: linear;
+}
+
+.chart {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    width: 100px;
+    height: 100px;
+    margin: auto;
+    font-size: 24px;
+    font-family: "Lato", sans-serif;
+    border-radius: 50%;
+    box-shadow: inset 0 0 0px 10px #cacaca;
+    overflow: hidden;
+}
+.chart:before {
+    content: attr(data-percentage) "%";
+    position: absolute;
+    display: block;
+    width: 100px;
+    height: 100px;
+    line-height: 100px;
+    text-align: center;
+    opacity: 1;
+    border-radius: 50%;
+    -webkit-transition: opacity 0s linear 0s;
+    transition: opacity 0s linear 0s;
+}
+.percentage {
+    position: absolute;
+    top: 38px;
+    z-index: 1;
+    height: 24px;
+    width: 100px;
+    font-size: 24px;
+    line-height: 24px;
+    text-indent: 53px;
+    overflow: hidden;
+    visibility: visibile;
+    -webkit-transition: visibility 0s linear 0s;
+    transition: visibility 0s linear 0s;
+}
+.completed {
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+.completed:before {
+    clip: rect(0 100px 100px 50px);
+}
+.completed:before, .completed:after {
+    content: '';
+    position: absolute;
+    width: 100px;
+    height: 100px;
+    box-shadow: inset 0 0 0px 10px #006341;
+    border-radius: 50%;
+}
+.completed:after {
+    clip: rect(0 50px 100px 0);
 }
