--- a/css/style.css
+++ b/css/style.css
@@ -168,7 +168,7 @@ header.onTop .navbar-toggleable-md .navbar-nav{
 	position: absolute;
 	width: calc(100% - 10px);
 	height: 2px;
-	background: rgb(41, 43, 114);
+	background: #fff;/*rgb(41, 43, 114);*/
 	bottom: 7px;
 	left: 5px;
 }
@@ -1214,63 +1214,94 @@ footer button:focus, footer button:active{
 }
 
 .chart {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    width: 100px;
-    height: 100px;
-    margin: auto;
-    font-size: 24px;
-    font-family: "Lato", sans-serif;
-    border-radius: 50%;
-    box-shadow: inset 0 0 0px 10px #cacaca;
-    overflow: hidden;
+  position: relative;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  width: 100px;
+  height: 100px;
+  margin: auto;
+  font-size: 24px;
+  font-family: "Lato", sans-serif;
+  border-radius: 50%;
+  box-shadow: inset 0 0 0px 10px #cacaca;
+  overflow: hidden;
 }
 .chart:before {
-    content: attr(data-percentage) "%";
-    position: absolute;
-    display: block;
-    width: 100px;
-    height: 100px;
-    line-height: 100px;
-    text-align: center;
-    opacity: 1;
-    border-radius: 50%;
-    -webkit-transition: opacity 0s linear 0s;
-    transition: opacity 0s linear 0s;
+  content: attr(data-percentage) "%";
+  position: absolute;
+  display: block;
+  width: 100px;
+  height: 100px;
+  line-height: 100px;
+  text-align: center;
+  opacity: 0;
+  border-radius: 50%;
+  -webkit-transition: opacity 0s linear 0s;
+  transition: opacity 0s linear 0s;
 }
-.percentage {
-    position: absolute;
-    top: 38px;
-    z-index: 1;
-    height: 24px;
-    width: 100px;
-    font-size: 24px;
-    line-height: 24px;
-    text-indent: 53px;
-    overflow: hidden;
-    visibility: visibile;
-    -webkit-transition: visibility 0s linear 0s;
-    transition: visibility 0s linear 0s;
-}
+
 .completed {
-    position: absolute;
-    top: 0;
-    left: 0;
-}
-.completed:before {
-    clip: rect(0 100px 100px 50px);
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 .completed:before, .completed:after {
-    content: '';
-    position: absolute;
-    width: 100px;
-    height: 100px;
-    box-shadow: inset 0 0 0px 10px #006341;
-    border-radius: 50%;
+  content: '';
+  position: absolute;
+  width: 100px;
+  height: 100px;
+  box-shadow: inset 0 0 0px 10px #006341;
+  border-radius: 50%;
+}
+.completed:before {
+  clip: rect(0 100px 100px 50px);
 }
 .completed:after {
-    clip: rect(0 50px 100px 0);
+  clip: rect(0 50px 100px 0);
+}
+.countdown canvas{
+	display: inline-block;
+}
+.countdown .col{
+	position: relative;
+	text-align: center;
+}
+.countdown .col:before{
+	content: '';
+	position: absolute;
+	width: 202px;
+	height: 202px;
+	border-radius: 50%;
+	border: 2px solid #fff;
+	top: 10px;
+	left: calc(50% - 100px);
+}
+.counting-val {
+	position: absolute;
+	text-align: center;
+	top: 50px;
+	left: 0px;
+	width: 100%;
+	height: 80px;
+	line-height: 80px;
+	font-size: 74px;
+	color: #fff;
+}
+.countdown p{
+	position: absolute;
+	text-align: center;
+	top: 130px;
+	left: 0px;
+	width: 100%;
+	height: 30px;
+	line-height: 30px;
+	font-size: 30px;
+	color: #fff;
+}
+.ico-detail-txt{
+	font-size: 25px;
+	color: #000;
+	margin-top: 40px;
 }
