update ico details

--- a/css/style.css
+++ b/css/style.css
@@ -476,7 +476,7 @@ header.onTop .navbar-toggler-right{
 .ico-percent-color.color4{
 	background: #6699cc;
 }
-.ecosystem table td{
+.icodetails table td{
 	text-align: left;
 	font-size: 24px;
 }
