--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,7 @@ header{
 	position: fixed;
 	width: 100%;
 	height: 60px;
-	background: rgb(3, 6, 58);/*rgb(160, 170, 240);*/
+	background: #7599E7;/*rgb(3, 6, 58);/*rgb(160, 170, 240);*/
 	border-bottom: 2px solid #fff;
 	padding: 0 calc(50% - 496px);
 	z-index: 999;
@@ -409,6 +409,7 @@ header.onTop .navbar-toggler-right{
 .ecosystem img.ecosystem-image{
 	width: 100%;
 	max-width: 940px;
+	margin-top: 40px;
 }
 .ecosystem img.ecosystem-icodetails{
 	width: 100%;
