--- a/css/style.css
+++ b/css/style.css
@@ -211,7 +211,7 @@ header.onTop .navbar-toggler-right{
 }
 #home h1{
 	text-transform: uppercase;
-	text-shadow: 0 0 1px rgba(255, 255, 255, 1);
+	text-shadow: 1px 1px 2px rgba(255, 255, 255, 1);
 }
 #home p{
 	color: #fff;
