--- a/css/style.css
+++ b/css/style.css
@@ -1471,3 +1471,22 @@ button:focus, button:active{
 	font-size: 22px;
 	height: 100%;
 }
+@media (max-width: 680px)
+{
+	.prob-slider-bg p{
+		font-size: 18px;
+	}
+}
+@media (max-width: 570px)
+{
+	.prob-slider-bg p{
+		font-size: 14px;
+	}
+}
+@media (max-width: 450px)
+{
+	.htmleaf-container{
+		display: none;
+	}
+}
+
