--- a/css/style.css
+++ b/css/style.css
@@ -923,7 +923,7 @@ header.onTop .navbar-toggler-right{
 	margin: 0 auto 30px;
 	background-repeat: no-repeat;
 	background-position: center;
-	background-size: 100%;
+	background-size: cover;
 	overflow: hidden;
 	cursor: pointer;
 	transition-duration: 0.3s;
