--- a/css/style.css
+++ b/css/style.css
@@ -1832,13 +1832,16 @@ button:focus, button:active{
 	font-size: 20px;
 	cursor: pointer;
 }
-#biodialog img{
+#biodialog .photo{
 	display: block;
 	width: 160px;
 	height: 160px;
 	margin: 20px auto;
 	border-radius: 50%;
 	border: 2px solid rgb(41, 43, 114);
+	background-size: cover;
+	background-position: center;
+	background-repeat: no-repeat;
 }
 #biodialog .name{
 	text-align: center;
