--- a/css/style.css
+++ b/css/style.css
@@ -206,19 +206,25 @@ header.onTop .navbar-toggler-right{
 	left: 0;
 	right: 0;
 	bottom: 0;
-	padding: 320px calc(50% - 496px) 0;
+	padding: 240px calc(50% - 496px) 0;
 	z-index: 1;
 }
 #home h1{
 	text-transform: uppercase;
 	text-shadow: 1px 1px 2px rgba(220, 220, 220, 1);
+	height: 88px;
 }
 #home p{
-	color: #fff;
-	font-size: 25px;
+	color: #7599E7;
+	font-size: 32px;
 	margin-bottom: 50px;
 	letter-spacing: 3px;
 	text-shadow: 1px 1px 2px rgba(0, 0, 0, 1);
+	height: 144px;
+}
+#home p span{
+	font-size: 25px;
+	color: #fff;
 }
 #home .home-icon{
 	margin: 0 auto;
