--- a/css/style.css
+++ b/css/style.css
@@ -567,7 +567,7 @@ header.onTop .navbar-toggler-right{
 	left: -500px;
 }
 #roadmap{
-	background: rgba(52, 58, 151, 0.5);
+	background: rgba(52, 58, 151, 0.3);
 	min-height: 1164px;
 }
 #roadmap h1{
@@ -580,6 +580,7 @@ header.onTop .navbar-toggler-right{
 	position: relative;
 }
 #roadmap_graph {
+	padding: 0 40px;
 }
 #roadmap_graph .roadmap-row{
 	position: relative;
@@ -587,6 +588,23 @@ header.onTop .navbar-toggler-right{
 }
 #roadmap_graph .row-float-left{
 	padding-right: 120px;
+}
+#roadmap_graph .row-float-left .roadmap-row-before{
+	content: '';
+	position: absolute;
+	top: 50px;
+	left: 120px;
+	width: 0px;
+	height: 10px;
+	background-color: rgb(45, 52, 142);
+	transition-duration: 1.2s;
+	transition-timing-function: linear;
+}
+#roadmap_graph .row-float-left .roadmap-row-before.roadmap-row-before-0{
+	left: 0px;
+	width: 0px;
+	border-top-left-radius: 5px;
+	border-bottom-left-radius: 5px;
 }
 #roadmap_graph .row-float-right{
 	padding-left: 120px;
@@ -597,17 +615,34 @@ header.onTop .navbar-toggler-right{
 	position: relative;
 	overflow: hidden;
 }
-#roadmap_graph .roadmap-col:last-child{
-	overflow: visible;
-}
-#roadmap_graph .roadmap-col:before{
+#roadmap_graph .roadmap-col .roadmap-col-before{
 	content: '';
 	position: absolute;
-	width: 100%;
-	height: 10px;
-	top: 50px;
-	left: 0px;
-	background-color: #fff;
+	width: 0;/*calc(100% - 10px);*/
+	height: 6px;
+	top: 52px;
+	background-color: rgb(45, 52, 242);
+	border-radius: 2px;
+	z-index: 1;
+	transition-duration: 0.4s;
+}
+#roadmap_graph .row-float-left .roadmap-col .roadmap-col-before{
+	left: 5px;
+}
+#roadmap_graph .row-float-right .roadmap-col .roadmap-col-before{
+	right: 5px;
+}
+#roadmap_graph .row-float-left .roadmap-col:nth-child(3) .roadmap-col-before{
+	/*width: calc(100% - 125px);*/
+	left: 120px;
+}
+#roadmap_graph .row-float-right .roadmap-col:nth-child(3) .roadmap-col-before{
+	/*width: calc(100% - 125px);*/
+	right: 120px;
+}
+#roadmap_graph .row-float-left:first-child .roadmap-col .roadmap-col-before{
+	/*width: calc(100% - 5px);*/
+	left: 2px;
 }
 #roadmap_graph .roadmap-col .roadmap-content{
 	position: absolute;
@@ -615,7 +650,7 @@ header.onTop .navbar-toggler-right{
 	text-align: center;
 	left: -100%;
 	opacity: 0;
-	transition-duration: 0.3s;
+	transition-duration: 0.8s;
 }
 #roadmap_graph.mobile-roadmap .roadmap-col .roadmap-content{
 	position: relative;
@@ -623,9 +658,6 @@ header.onTop .navbar-toggler-right{
 }
 #roadmap_graph .roadmap-col.float-right .roadmap-content{
 	left: 100%;
-}
-#roadmap_graph .roadmap-date{
-	opacity: 0;
 }
 #roadmap_graph .roadmap-date:after{
 	content: '';
@@ -637,45 +669,80 @@ header.onTop .navbar-toggler-right{
 	border-radius: 50%;
 	border: 3px solid rgb(112, 144, 193);
 	background: #fff;
+	z-index: 2;
 }
-#roadmap_graph .row-float-left .roadmap-col:first-child:before{
-	width: calc(100% - 120px);
-	left: 120px;
-}
-#roadmap_graph .row-float-left:first-child .roadmap-col:first-child:before{
-	width: calc(100% - 0px);
-	left: 0px;
-}
-#roadmap_graph .row-float-right .roadmap-col:first-child:before{
-	width: calc(100% - 120px);
-}
-#roadmap_graph .row-float-left:after{
-	content: '';
+#roadmap_graph .roadmap-row-after{
 	position: absolute;
 	width: 130px;
 	height: 260px;
 	top: 50px;
-	right: 0;
+	overflow: hidden;
+}
+#roadmap_graph .roadmap-row-after .roadmap-row-after-circle{
+	position: absolute;
+	width: 130px;
+	height: 260px;
+	top: 0px;
 	border-top-right-radius: 130px;
 	border-bottom-right-radius: 130px;
-	border: 10px solid #fff;
+	border: 10px solid rgb(45, 52, 142);
 	border-left: none;
+	transition-duration: 0.8s;
+	transition-timing-function: linear;
+	transform-origin: left;
 }
-#roadmap_graph .row-float-right:after{
+#roadmap_graph .row-float-left .roadmap-row-after{
+	right: 0;
+}
+#roadmap_graph .row-float-left .roadmap-row-after .roadmap-row-after-circle{
+	transform: rotateZ(-180deg);
+	right: 0;
+}
+#roadmap_graph .row-float-right .roadmap-row-after{
+	left: 0;
+}
+#roadmap_graph .row-float-right .roadmap-row-after .roadmap-row-after-circle{
+	transform: rotateZ(0deg);
+	left: 130px;
+}
+#roadmap_graph .row-float-right .roadmap-row-before{
 	content: '';
 	position: absolute;
-	width: 130px;
-	height: 260px;
 	top: 50px;
-	left: 0;
-	border-top-left-radius: 130px;
-	border-bottom-left-radius: 130px;
-	border: 10px solid #fff;
-	border-right: none;
+	right: 120px;
+	width: 0px;
+	height: 10px;
+	background-color: rgb(45, 52, 142);
+	transition-duration: 1.2s;
+	transition-timing-function: linear;
+}
+#roadmap_graph .roadmap-row:last-child .roadmap-row-before{
+	/*width: calc(100% - 120px);*/
+}
+#roadmap_graph .row-float-left.roadmap-row:last-child .roadmap-row-before{
+	border-top-right-radius: 5px;
+	border-bottom-right-radius: 5px;
+}
+#roadmap_graph .row-float-right.roadmap-row:last-child .roadmap-row-before{
+	border-top-left-radius: 5px;
+	border-bottom-left-radius: 5px;
+}
+#roadmap_graph .roadmap-row:last-child .roadmap-row-after-circle{
+	display: none;
 }
 #roadmap_graph .row-float-left:last-child:after,
 #roadmap_graph .row-float-right:last-child:after{
 	display: none;
+	content: '';
+	position: absolute;
+	width: 120px;
+	height: 0px;
+	top: 50px;
+	left: 0px;
+	border: none;
+	border-top: 10px solid rgb(45, 52, 142);
+	border-top-left-radius: 5px;
+	border-bottom-left-radius: 5px;
 }
 #roadmap_graph .row-float-left:last-child .roadmap-col:last-child:after{
 	content: '';
@@ -688,15 +755,17 @@ header.onTop .navbar-toggler-right{
 	border-radius: 0;
 }
 #roadmap_graph .row-float-right:last-child .roadmap-col:last-child:after{
+	display: none;
 	content: '';
 	position: absolute;
-	width: 110px;
+	width: 120px;
 	height: 0px;
 	top: 50px;
-	left: -125px;
+	left: -120px;
 	border: none;
-	border-top: 10px dashed #fff;
-	border-radius: 0;
+	border-top: 10px solid rgb(45, 52, 142);
+	border-top-left-radius: 5px;
+	border-bottom-left-radius: 5px;
 }
 #roadmap_graph .width-25{
 	width: 25%;
@@ -710,7 +779,8 @@ header.onTop .navbar-toggler-right{
 #roadmap_graph .roadmap-date{
 	font-size: 25px;
 	color: rgb(226, 214, 23);
-	transition-duration: 0.3s;
+	/*transition-duration: 0.6s;*/
+	opacity: 0;
 }
 #roadmap_graph .roadmap-content{
 	font-family: 'Roboto-Regular';
@@ -718,6 +788,42 @@ header.onTop .navbar-toggler-right{
 	color: #fff;
 	margin-top: 40px;
 	line-height: 26px;
+}
+#roadmap_graph.rendered .row-float-left .roadmap-row-before.roadmap-row-before-0{
+	width: calc(100% - 120px);
+}
+#roadmap_graph.rendered .row-float-left .roadmap-row-after .roadmap-row-after-circle{
+	transform: rotateZ(0deg);
+}
+#roadmap_graph.rendered .row-float-right .roadmap-row-before{
+	width: calc(100% - 240px);
+}
+#roadmap_graph.rendered .row-float-right .roadmap-row-after .roadmap-row-after-circle{
+	transform: rotateZ(-180deg);
+}
+#roadmap_graph.rendered .row-float-left .roadmap-row-before{
+	width: calc(100% - 240px);
+}
+#roadmap_graph.rendered .row-float-right.roadmap-row:last-child .roadmap-row-before{
+	width: calc(100% - 120px);
+}
+#roadmap_graph.rendered .row-float-left:first-child .roadmap-col .roadmap-col-before{
+	width: calc(100% - 10px);
+}
+#roadmap_graph.rendered .row-float-left .roadmap-col .roadmap-col-before{
+	width: calc(100% - 10px);
+}
+#roadmap_graph.rendered .row-float-right .roadmap-col .roadmap-col-before{
+	width: calc(100% - 10px);
+}
+#roadmap_graph.rendered .row-float-right .roadmap-col:nth-child(3) .roadmap-col-before{
+	width: calc(100% - 125px);
+}
+#roadmap_graph.rendered .row-float-left .roadmap-col:nth-child(3) .roadmap-col-before{
+	width: calc(100% - 125px);
+}
+#roadmap_graph.rendered .row-float-left:first-child .roadmap-col:nth-child(3) .roadmap-col-before{
+	width: calc(100% - 10px);
 }
 #roadmap_graph.mobile-roadmap .roadmap-col{
 	height: auto;
@@ -729,7 +835,7 @@ header.onTop .navbar-toggler-right{
 	content: '';
 	width: 0;
 	height: calc(100% - 60px);
-	left: 30px;
+	left: 70px;
 	top: 0px;
 	border-left: 10px solid #fff;
 }
