--- a/css/style.css
+++ b/css/style.css
@@ -211,19 +211,24 @@ header.onTop .navbar-toggler-right{
 }
 #home h1{
 	text-transform: uppercase;
-	text-shadow: 1px 1px 2px rgba(220, 220, 220, 1);
+	/*text-shadow: 1px 1px 2px rgba(220, 220, 220, 1);*/
 	height: 88px;
+	color: #fff;
+	font-size: 44px;
 }
 #home p{
-	color: #7599E7;
-	font-size: 32px;
+	color: #fff;/*#7599E7;*/
+	font-size: 36px;
 	margin-bottom: 50px;
 	letter-spacing: 3px;
 	text-shadow: 1px 1px 2px rgba(0, 0, 0, 1);
 	height: 144px;
 }
+#home .home-content p{
+	display: none;
+}
 #home p span{
-	font-size: 25px;
+	font-size: 32px;
 	color: #fff;
 }
 #home .home-icon{
