--- a/css/style.css
+++ b/css/style.css
@@ -226,10 +226,17 @@ header.onTop .navbar-toggler-right{
 }
 #home .home-content p{
 	display: none;
+	text-align: left;
+	padding-left: 115px;
+}
+#home .home-content p.align-center{
+	padding-left: 0;
+	text-align: center;
 }
 #home p span{
 	font-size: 32px;
 	color: #fff;
+	white-space: nowrap;
 }
 #home .home-icon{
 	margin: 0 auto;
