remove background for subtitle

--- a/css/style.css
+++ b/css/style.css
@@ -261,7 +261,7 @@ header.onTop .navbar-toggler-right{
 	padding: 10px;
 	width: 600px;
 	white-space: nowrap;
-	background: rgba(255, 255, 255, 0.2);
+	/*background: rgba(255, 255, 255, 0.2);*/
 }
 #home .home-content p.align-center{
 	padding-left: 0;
